Resolved #58 Test: Prepare database for test only one time